--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <body>
         <h1>Randomly Choose a Student</h1>
         <button id ="studentButton">Click Me!</button>
-        <div id ="studentDisplay"></div>
+        <div id ="studentDisplay">
+            <p>msm</p>
+        </div>
 
         <h1>Randomly Choose a Teacher</h1>
         <button id ="teacherButton">Click Me!</button>
