--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <body>
         <h1>Randomly Choose a Student</h1>
         <button id ="studentButton">Click Me!</button>
-        <div id ="studentDisplay">
-            <p>msm</p>
-        </div>
+        <div id ="studentDisplay"></div>
 
         <h1>Randomly Choose a Teacher</h1>
         <button id ="teacherButton">Click Me!</button>
